--- a/Recipes/Recipes/Views/RecipesPage.xaml
+++ b/Recipes/Recipes/Views/RecipesPage.xaml
@@ -3,20 +3,18 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Recipes.Views.RecipesPage">
-    
-        <ScrollView>
-            <StackLayout VerticalOptions="StartAndExpand">
-            <Label Text="{Binding Title}" 
-                       FontAttributes="Bold"
-                       FontSize="22"></Label>
-            <Label Text="{Binding Content}"></Label>
-            <!--Frame BorderColor="LightBlue"
-                       CornerRadius="10"
-                       HasShadow="True">
-                    
-                </Frame-->
-                <Label Text="{Binding Process}"></Label>
-            </StackLayout>
-        </ScrollView>
-   
+    <ScrollView x:Name="Scroll">
+        <StackLayout Margin="20,20,20,20"
+                     VerticalOptions="StartAndExpand">
+            <Label Text="{Binding Title}"
+                   FontAttributes="Bold"
+                   FontSize="22"/>
+            <Frame BorderColor="LightBlue"
+                   CornerRadius="10"
+                   HasShadow="True">
+                <Label Text="{Binding Content}"/>
+            </Frame>
+            <Label Text="{Binding Process}"/>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
