--- a/Recipes/Recipes/Views/FoodPage.xaml
+++ b/Recipes/Recipes/Views/FoodPage.xaml
@@ -2,11 +2,18 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Recipes.Views.FoodPage">
-    <ContentPage.Content>
-        <StackLayout Margin="20,20,20,20" Orientation="Vertical">
-                <Label Text="{Binding Title}" 
-                       FontAttributes="Bold"
-                       FontSize="22"></Label>
+    <ScrollView x:Name="Scroll">
+        <StackLayout Margin="20,20,20,20"
+                     VerticalOptions="StartAndExpand">
+            <Label Text="{Binding Title}"
+                   FontAttributes="Bold"
+                   FontSize="22"/>
+            <Frame BorderColor="LightBlue"
+                   CornerRadius="10"
+                   HasShadow="True">
+                <Label Text="{Binding Content}"/>
+            </Frame>
+            <Label Text="{Binding Process}"/>
         </StackLayout>
-    </ContentPage.Content>
+    </ScrollView>
 </ContentPage>
